airflow/logs/dag_id=dag_to_dum_raw_data_to_postgres/run_id=manual__2023-12-23T12:39:14.579889+00:00/task_id=create_raw_data_storing_tables/attempt=3.log
[2023-12-23T13:38:39.109+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: dag_to_dum_raw_data_to_postgres.create_raw_data_storing_tables manual__2023-12-23T12:39:14.579889+00:00 [queued]>
[2023-12-23T13:38:39.121+0000] {taskinstance.py:1957} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: dag_to_dum_raw_data_to_postgres.create_raw_data_storing_tables manual__2023-12-23T12:39:14.579889+00:00 [queued]>
[2023-12-23T13:38:39.122+0000] {taskinstance.py:2171} INFO - Starting attempt 3 of 6
[2023-12-23T13:38:39.139+0000] {taskinstance.py:2192} INFO - Executing <Task(PostgresOperator): create_raw_data_storing_tables> on 2023-12-23 12:39:14.579889+00:00
[2023-12-23T13:38:39.145+0000] {standard_task_runner.py:60} INFO - Started process 247 to run task
[2023-12-23T13:38:39.150+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', 'dag_to_dum_raw_data_to_postgres', 'create_raw_data_storing_tables', 'manual__2023-12-23T12:39:14.579889+00:00', '--job-id', '1220', '--raw', '--subdir', 'DAGS_FOLDER/dump_raw_data_to_postgres.py', '--cfg-path', '/tmp/tmpegsb0org']
[2023-12-23T13:38:39.333+0000] {standard_task_runner.py:88} INFO - Job 1220: Subtask create_raw_data_storing_tables
[2023-12-23T13:38:39.433+0000] {task_command.py:423} INFO - Running <TaskInstance: dag_to_dum_raw_data_to_postgres.create_raw_data_storing_tables manual__2023-12-23T12:39:14.579889+00:00 [running]> on host 51dca2e3ed8e
[2023-12-23T13:38:39.528+0000] {taskinstance.py:2481} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='10 academy' AIRFLOW_CTX_DAG_ID='dag_to_dum_raw_data_to_postgres' AIRFLOW_CTX_TASK_ID='create_raw_data_storing_tables' AIRFLOW_CTX_EXECUTION_DATE='2023-12-23T12:39:14.579889+00:00' AIRFLOW_CTX_TRY_NUMBER='3' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-12-23T12:39:14.579889+00:00'
[2023-12-23T13:38:39.529+0000] {sql.py:276} INFO - Executing: create table if not exists raw_vehicle (
    track_id SERIAL PRIMARY KEY,
    type VARCHAR(255),
    traveled_d FLOAT,
    avg_speed FLOAT
);
create table if not exists raw_vehicle_trajectory(
    id SERIAL PRIMARY KEY,
    lat FLOAT,
    lon FLOAT,
    speed FLOAT,
    lon_acc FLOAT,
    lat_acc FLOAT,
    time FLOAT,
    track_id INTEGER REFERENCES raw_vehicle(track_id)
);

create type if not exists status_enum AS ENUM ('completed', 'failed');

create table if not exists csv_file_name(
    id  SERIAL PRIMARY KEY,
    name VARCHAR(500),
    status status_enum
)
[2023-12-23T13:38:39.539+0000] {base.py:83} INFO - Using connection ID 'week_two_dwh' for task execution.
[2023-12-23T13:38:39.551+0000] {base.py:83} INFO - Using connection ID 'week_two_dwh' for task execution.
[2023-12-23T13:38:39.564+0000] {sql.py:432} INFO - Running statement: create table if not exists raw_vehicle (
    track_id SERIAL PRIMARY KEY,
    type VARCHAR(255),
    traveled_d FLOAT,
    avg_speed FLOAT
);
create table if not exists raw_vehicle_trajectory(
    id SERIAL PRIMARY KEY,
    lat FLOAT,
    lon FLOAT,
    speed FLOAT,
    lon_acc FLOAT,
    lat_acc FLOAT,
    time FLOAT,
    track_id INTEGER REFERENCES raw_vehicle(track_id)
);

create type if not exists status_enum AS ENUM ('completed', 'failed');

create table if not exists csv_file_name(
    id  SERIAL PRIMARY KEY,
    name VARCHAR(500),
    status status_enum
), parameters: None
[2023-12-23T13:38:39.570+0000] {taskinstance.py:2699} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 437, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "not"
LINE 18: create type if not exists status_enum AS ENUM ('completed', ...
                        ^

[2023-12-23T13:38:39.581+0000] {taskinstance.py:1138} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_to_dum_raw_data_to_postgres, task_id=create_raw_data_storing_tables, execution_date=20231223T123914, start_date=20231223T133839, end_date=20231223T133839
[2023-12-23T13:38:39.598+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 1220 for task create_raw_data_storing_tables (syntax error at or near "not"
LINE 18: create type if not exists status_enum AS ENUM ('completed', ...
                        ^
; 247)
[2023-12-23T13:38:39.647+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2023-12-23T13:38:39.834+0000] {taskinstance.py:3281} INFO - 0 downstream tasks scheduled from follow-on schedule check
